# quickstitch

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: roadmap.md
guide/: book.toml
guide/src/: SUMMARY.md
src/: lib.rs  main.rs
src/_cli/: mod.rs
src/_gui/: mod.rs
src/stitcher/: image_loader.rs  image_splitter.rs  mod.rs  splitter.rs
