[package]
name = "quickstitch"
version = "0.1.0"
edition = "2021"

[features]
cli = ["dep:clap"]

[dependencies]
anyhow = "1.0.86"
image = "0.25.2"
natord = "1.0.9"
rayon = "1.10.0"
thiserror = "1.0.63"
iced = { git = "https://github.com/iced-rs/iced", rev = "043f0302142e46bf1d7ba2015f83261813280fec" }
itertools = "0.13.0"

# cli
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "qstitch"
required-features = ["cli"]