[package]
name = "quickstitch"
version = "0.1.0"
edition = "2021"

[features]
gui = ["dep:iced"]

[dependencies]
image = { version = "0.25.2", features = ["rayon", "jpeg", "png", "webp"] }
natord = "1.0.9"
rayon = "1.10.0"
thiserror = "1.0.63"
itertools = "0.13.0"

# gui deps
iced = { git = "https://github.com/iced-rs/iced", rev = "043f0302142e46bf1d7ba2015f83261813280fec", optional = true }

[dev-dependencies]
criterion = "0.5.1"

# [[bin]]
# name = "quickstitch-gui"
# required-features = ["gui"]

[[bin]]
name = "test"
