[package]
name = "quickstitch"
version = "0.1.0"
edition = "2021"

[features]
gui = ["dep:iced"]
cli = ["dep:clap", "dep:anyhow"]

[dependencies]
image = { version = "0.25.2", features = ["rayon", "jpeg", "png", "webp"] }
natord = "1.0.9"
rayon = "1.10.0"
thiserror = "1.0.63"
itertools = "0.13.0"

# gui deps
iced = { git = "https://github.com/iced-rs/iced", rev = "043f0302142e46bf1d7ba2015f83261813280fec", optional = true }

# cli deps
clap = { version = "4.5.21", features = ["derive", "wrap_help"], optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "quickstitch_gui"
required-features = ["gui"]

[[bin]]
name = "quickstitch_cli"
required-features = ["cli"]

[[bin]]
name = "test"
